[tool.poetry]
name = "diabetes-easy-backend"  # Replace with your project name
version = "0.1.0"
description = ""
authors = ["sebastian"]
readme = "README.md"  # Optional but recommended

[tool.poetry.dependencies]
python = ">=3.9,<3.10"  # Pinned to Python 3.9.x (adjust if needed)
flask = "2.3.2"
gunicorn = "20.1.0"
keras = "2.12.0"
scikit-learn = { version = "1.3.2", extras = ["openblas"] }  # Prefers binary
numpy = "1.24.3"
joblib = "1.2.0"
protobuf = "3.20.3"
gevent = "22.10.2"
h5py = "3.8.0"

[tool.poetry.group.dev.dependencies]  # Optional dev dependencies
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"