[tool.poetry]
name = "diabetes-easy-backend"
version = "0.1.0"
description = ""
authors = ["sebastian"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
flask = "2.3.2"
gunicorn = {version = "20.1.0", extras = ["gevent"]}  # Added gevent integration
keras = "2.12.0"
scikit-learn = {version = "1.3.2", extras = ["openblas"]}
numpy = "1.24.3"
joblib = "1.2.0"
protobuf = "3.20.3"
gevent = "22.10.2"  # Required for async workers
h5py = "3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Add this new section for Render-specific configuration
[tool.poetry.scripts]
start = "gunicorn --worker-class gevent --workers 4 --bind 0.0.0.0:$PORT index:app"